// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurricUnitCard changes color when highlighed 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-kMkxaj ioKvvK gTHfrn"
    >
      <a
        class="sc-a6022ff2-0 ejmuOd"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-aXZVg sc-gEvEer fMYYaJ bktafW"
          data-testid="unit-card"
        >
          <div
            class="sc-aXZVg sc-gEvEer hdseiA gWvaOf"
          >
            <div
              class="sc-9d6b6245-0 bZsOFK pa11y-ignore"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-eqUAAy WYobB"
            >
              Something nice
            </span>
            <div
              class="sc-aXZVg bOAMBs"
              data-testid="options-tag"
            >
              <span
                class="sc-eqUAAy hDVDAI"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-aXZVg sc-gEvEer hgzzUG ioiTMB"
          >
            <div
              class="sc-aXZVg sc-gEvEer hdseiA fUsBHa"
            >
              <div
                class="sc-aXZVg sc-dAbbOL ifqfxt qwGmk"
              >
                Unit info
              </div>
              <div
                class="sc-aXZVg anoZA"
              >
                <img
                  alt=""
                  class="sc-iGgWBj lcrpYX"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CurricUnitCard highlighted state 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-kMkxaj ioKvvK gTHfrn"
    >
      <a
        class="sc-a6022ff2-0 QTKhP"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-aXZVg sc-gEvEer nSIBN bktafW"
          data-testid="highlighted-unit-card"
        >
          <div
            class="sc-aXZVg sc-gEvEer hdseiA gWvaOf"
          >
            <div
              class="sc-9d6b6245-0 bZsOFK pa11y-ignore"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-eqUAAy WYobB"
            >
              Something nice
            </span>
            <div
              class="sc-aXZVg bOAMBs"
              data-testid="options-tag"
            >
              <span
                class="sc-eqUAAy hDVDAI"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-aXZVg sc-gEvEer hgzzUG ioiTMB"
          >
            <div
              class="sc-aXZVg sc-gEvEer hdseiA fUsBHa"
            >
              <div
                class="sc-aXZVg sc-dAbbOL ifqfxt qwGmk"
              >
                Unit info
              </div>
              <div
                class="sc-aXZVg anoZA"
              >
                <img
                  alt=""
                  class="sc-iGgWBj bOyFfb"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </div>
            </div>
          </div>
          <div
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
             (highlighted)
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CurricUnitCard index is correct 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-kMkxaj ioKvvK gTHfrn"
    >
      <a
        class="sc-a6022ff2-0 ejmuOd"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-aXZVg sc-gEvEer fMYYaJ bktafW"
          data-testid="unit-card"
        >
          <div
            class="sc-aXZVg sc-gEvEer hdseiA gWvaOf"
          >
            <div
              class="sc-9d6b6245-0 bZsOFK pa11y-ignore"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-eqUAAy WYobB"
            >
              Something nice
            </span>
            <div
              class="sc-aXZVg bOAMBs"
              data-testid="options-tag"
            >
              <span
                class="sc-eqUAAy hDVDAI"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-aXZVg sc-gEvEer hgzzUG ioiTMB"
          >
            <div
              class="sc-aXZVg sc-gEvEer hdseiA fUsBHa"
            >
              <div
                class="sc-aXZVg sc-dAbbOL ifqfxt qwGmk"
              >
                Unit info
              </div>
              <div
                class="sc-aXZVg anoZA"
              >
                <img
                  alt=""
                  class="sc-iGgWBj lcrpYX"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CurricUnitCard render 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-kMkxaj ioKvvK gTHfrn"
    >
      <a
        class="sc-a6022ff2-0 ejmuOd"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-aXZVg sc-gEvEer fMYYaJ bktafW"
          data-testid="unit-card"
        >
          <div
            class="sc-aXZVg sc-gEvEer hdseiA gWvaOf"
          >
            <div
              class="sc-9d6b6245-0 bZsOFK pa11y-ignore"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-eqUAAy WYobB"
            >
              Something nice
            </span>
            <div
              class="sc-aXZVg bOAMBs"
              data-testid="options-tag"
            >
              <span
                class="sc-eqUAAy hDVDAI"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-aXZVg sc-gEvEer hgzzUG ioiTMB"
          >
            <div
              class="sc-aXZVg sc-gEvEer hdseiA fUsBHa"
            >
              <div
                class="sc-aXZVg sc-dAbbOL ifqfxt qwGmk"
              >
                Unit info
              </div>
              <div
                class="sc-aXZVg anoZA"
              >
                <img
                  alt=""
                  class="sc-iGgWBj lcrpYX"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;
